fix(widget): handle colors/spacing

--- a/src/components/reusable/widget/gridstack.sample.scss
+++ b/src/components/reusable/widget/gridstack.sample.scss
@@ -24,6 +24,6 @@
 /* custom resize handle */
 .grid-stack-item > .ui-resizable-se {
   transform: none;
-  background-image: url('data:image/svg+xml,<svg viewBox="0 0 16 16" stroke="%23000000" stroke-width="2px" xmlns="http://www.w3.org/2000/svg"><path d="m9.5 14.5 5-5M4 14.5 14.5 4"></path></svg>');
+  background-image: url('data:image/svg+xml,<svg viewBox="0 0 16 16" stroke="%236D6D6D" stroke-width="2px" xmlns="http://www.w3.org/2000/svg"><path d="m9.5 14.5 5-5M4 14.5 14.5 4"></path></svg>');
   background-size: 16px;
 }
