--- a/src/components/reusable/widget/widgetDragHandle.scss
+++ b/src/components/reusable/widget/widgetDragHandle.scss
@@ -6,8 +6,9 @@
 
 .drag-handle {
   cursor: move;
-  margin-right: 4px;
+  margin-right: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--kd-color-text-secondary);
 }
